--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.3.3",
     "core-js": "^3.8.3",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "moment": "^2.29.4",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.7.20",
